force-app/main/default/objects/FinalSpaceCharactes__x/FinalSpaceCharactes__x.object-meta.xml
<CustomObject>
    <description>FinalSpaceCharactes</description>
    <externalDataSource>Final_Space_Data</externalDataSource>
    <externalName>FinalSpaceCharactes</externalName>
    <label>FinalSpaceCharactes</label>
    <pluralLabel>FinalSpaceCharactes</pluralLabel>
</CustomObject>