force-app/main/default/objects/FinalSpaceCharactes__x/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Gender</description>
    <externalDeveloperName>Gender</externalDeveloperName>
    <label>Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>