force-app/main/default/objects/FinalSpaceCharactes__x/fields/Hair__c.field-meta.xml
<CustomField>
    <fullName>Hair__c</fullName>
    <description>Hair</description>
    <externalDeveloperName>Hair</externalDeveloperName>
    <label>Hair</label>
    <length>100</length>
    <type>Text</type>
</CustomField>