force-app/main/default/objects/FinalSpaceCharactes__x/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Image URL</description>
    <externalDeveloperName>Image URL</externalDeveloperName>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>