force-app/main/default/objects/FinalSpaceCharactes__x/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Origin</description>
    <externalDeveloperName>Origin</externalDeveloperName>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>